# Project-Deathblade

./: .gitignore  CMakeLists.txt  README.md  doxyfile  mastertestfile
animation_test/: Makefile  README.md  main.cpp
animation_test/14_animated_sprites_and_vsync/: 14_animated_sprites_and_vsync.cpp  Makefile  readme.txt
controller_base/: controlbaseclass.cpp  controlbaseclass.h  gameenums.h  tempsettings.cpp  tempsettings.h
controller_camera/: CMakeLists.txt  camera_object.cpp  camera_object.h  cameracontrol.cpp  cameracontrol.h
developer_console/: CMakeLists.txt  developer_console.cpp  developer_console.h  game_settings.cpp  game_settings.h
gameobjects/: CMakeLists.txt  basicwall.cpp  basicwall.h  gameobject.cpp  gameobject.h  objectbase.cpp  objectbase.h  objectcontroller.cpp  objectcontroller.h  star.cpp  star.h  texturewall.cpp  texturewall.h
initialfun_james/: CMakeLists.txt  README.md
initialfun_james/developer_console/: CMakeLists.txt  developer_console.cpp  developer_console.h
initialfun_james/developer_consoletester/: CMakeLists.txt  main.cpp
initialfun_james/gameobjects/: CMakeLists.txt  basicwall.cpp  basicwall.h  objectbase.cpp  objectbase.h  objectcontroller.cpp  objectcontroller.h  star.cpp  star.h  texturewall.h
initialfun_james/graphicscontrol/: CMakeLists.txt  cameracontrol.cpp  cameracontrol.h  controlbaseclass.cpp  controlbaseclass.h  tempsettings.h
initialfun_james/mainprogram/: .main.cpp.swp  CMakeLists.txt  main.cpp
initialfun_james/player/: CMakeLists.txt  boundclass.h  player.cpp  player.h
mainprogram/: CMakeLists.txt
players/: player.cpp  player.h
ui_objects/: boundclass.cpp  boundclass.h
utility/: CMakeLists.txt  vectors.cpp  vectors.h
